# python-monorepo-template

./: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  monorepo.code-workspace  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  docs.yaml  test.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: main.py
apps/worker/: Dockerfile
apps/worker/src/worker/: main.py
docker/: Dockerfile.api  Dockerfile.worker  compose.build.yaml  compose.yaml
docker/test/: compose.test.yaml
docker/test/sql/: 0_fake.sql
helm/: Makefile
lib/core/: pyproject.toml
lib/core/tests/: test_core.py
lib/dtos/: Makefile  pyproject.toml
lib/dtos/lib/dtos/: encoder.py
libs/lib-core/lib/core/: hello.py
libs/lib-dtos/: pyproject.toml
services/api/: Dockerfile  Makefile  pyproject.toml
services/api/src/api/: main.py
services/api/tests/: test_api.py  test_main.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/: main.py
services/worker/src/worker/: __main__.py
services/worker/tests/: test_main.py
src/: docker-compose.yaml
src/api/: Dockerfile  pyproject.toml
src/api/src/api/: __main__.py  main.py  routes.py  server.py
src/api/tests/: conftest.py  test_main.py  test_routes.py
src/core/: pyproject.toml
src/core/src/core/: __init__.py  logging.py
src/core/tests/: test_core.py
src/dtos/: pyproject.toml
src/dtos/tests/: test_dtos.py
src/lib-core/: pyproject.toml
src/lib-dtos/: pyproject.toml
src/services/api/: pyproject.toml
src/services/auth/: Dockerfile  pyproject.toml
src/services/users/: pyproject.toml
src/worker/: Dockerfile  pyproject.toml
src/worker/src/worker/: __main__.py  main.py  queue.py
src/worker/tests/: test_main.py
terraform/: main.tf
