[project]
name = "api"
version = "0.0.0"
requires-python = "~=3.12"
dependencies = [
    "lib-core",
    "fastapi ~= 0.112",
    "pydantic ~= 2.8",
    "uvicorn ~= 0.27",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv[cli] ~= 1.0",
    "httpx ~= 0.27"
]

[tool.uv.sources]
lib-core = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
