[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lib.core"
version = "0.0.0"
requires-python = "~=3.12"
dependencies = []

[tool.pdm.build]
includes = ["lib"]

[tool.pdm.dev-dependencies]
dev = [
    "mypy ~= 1.8",
    "pytest ~= 8.0",
    "pytest-cov ~= 4.1",
    "ruff ~= 0.2",
]

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
