[project]
name = "worker"
version = "0.0.0"
requires-python = "~=3.12"
dependencies = [
    "lib-core",
    "lib-dtos",
    "uvloop ~= 0.20"
]

[tool.uv]
dev-dependencies = [
    "python-dotenv[cli] ~= 1.0",
]

[tool.uv.sources]
lib-core = { workspace = true }
lib-dtos = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
