[project]
name = "api"
version = "0.0.0"
requires-python = "~=3.13.0"
dependencies = [
    "core",
    "fastapi ~= 0.112",
    "pydantic ~= 2.8",
    "uvicorn ~= 0.27",
]

[dependency-groups]
dev = ["python-dotenv[cli] ~= 1.0", "httpx ~= 0.27"]

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"
