[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Ben Fasoli <ben@pngme.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
acme-core = {git = "git@github.com:benfasoli/monorepo.git", subdirectory="src/packages/acme-core"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
